Fix layering, scrollbar positioning

--- a/static_source/_header.sass
+++ b/static_source/_header.sass
@@ -65,10 +65,14 @@
         width: 6
 
 .Drawer
+    @extend %nav-layer
     background: $white
 
+
 .Brozar
+    height: 100%
     .Brozar_content
+        height: 100%
         width: calc(100% - 51px)
     .Brozar_controls
         width: 51px
