--- a/static_source/shared/_layers.sass
+++ b/static_source/shared/_layers.sass
@@ -1,5 +1,8 @@
 +exports('layers')
 
+    %nav-layer
+        z-index: 4
+
     %header-layer
         z-index: 3
 
